grammar.js
    source_file: $ => optional($.module_body),

    module_body: $ => choice(
      seq(repeat1(choice($.module_binding, $.expression_statement)), optional($.expression)),
      $.expression,
    ),

    block_body: $ => choice(
      seq(repeat1(choice($.binding, $.expression_statement)), optional($.expression)),
      $.expression,
    ),

    spaces: $ => / +/,
    newline: $ => /\r\n|\r|\n/,

    identifier: $ => /[A-Za-z][A-Za-z0-9_]*|_[0-9]*[A-Za-z_][A-Za-z0-9_]*/,

    // '_' and '_N' must be declared before identifier so a lone '_' is not
    // swallowed by the identifier regex (tree-sitter prefers the earlier
    // rule on equal-length matches; longer matches win elsewhere).
    indexed_placeholder: $ => token(prec(1, /_[0-9]+/)),

    // ---------------------------------------------------------------- bindings
    module_binding: $ => choice(
      $.let_binding,
      $.let_pattern_binding,
      $.let_else_binding,
      $.decl_binding,
      $.def_binding,
      $.native_type_binding,
      $.native_binding,
      $.type_binding,
      $.trait_binding,
      $.impl_binding,
      $.module_declaration,
      $.use_binding,
      $.data_binding,
    ),

    let_binding: $ => prec(2, seq(optional($.visibility), 'let', optional($.identifier), optional(seq(':', $.expression)), '=', optional($.expression), ';')),
    decl_binding: $ => seq(optional($.visibility), 'decl', $.identifier, ':', $.type_scheme, ';'),
    def_binding: $ => seq(optional($.visibility), 'def', $.identifier, optional(seq(':', $.type_scheme)), '=', $.expression, ';'),
    type_binding: $ => seq(repeat($.decorator), optional($.visibility), 'type', $.identifier, optional($.type_parameters), '=', $.type_initializer, ';'),
    type_initializer: $ => choice($.struct_initializer, $.enum_initializer, $.expression),
    struct_initializer: $ => seq(
      'struct',
      choice(seq('{',
      optional(seq($.struct_initializer_field, repeat(seq(',', $.struct_initializer_field)), optional(','))),
      '}'), seq('(', $.expression, ')')),
    ),
    struct_initializer_field: $ => seq(repeat($.decorator), $.identifier, ':', $.expression),
    enum_initializer: $ => seq(
      'enum',
      '{',
      optional(seq($.enum_initializer_variant, repeat(seq(',', $.enum_initializer_variant)), optional(','))),
      '}',
    ),
    enum_initializer_variant: $ => seq(repeat($.decorator), $.identifier, optional(seq('(', $.expression, ')'))),
    decorator: $ => seq('@', $.decorator_path, optional($.arguments)),
    decorator_path: $ => seq($.identifier, repeat(seq('::', $.identifier))),

    trait_binding: $ => seq(
      optional($.visibility),
      'trait',
      $.identifier,
      '{',
      optional(seq($.trait_member, repeat(seq(',', $.trait_member)), optional(','))),
      '}',
      ';',
    ),
    trait_member: $ => seq($.identifier, ':', $.contract),

    impl_binding: $ => seq(
      'impl',
      optional($.type_parameters),
      $.contract,
      'for',
      $.contract,
      '{',
      optional(seq($.impl_member, repeat(seq(',', $.impl_member)), optional(','))),
      '}',
      ';',
    ),
    impl_member: $ => seq($.identifier, ':', $.expression),

    type_scheme: $ => seq(optional(seq('for', $.type_parameters)), $.contract),
    type_parameters: $ => seq('(', $.type_parameter, repeat(seq(',', $.type_parameter)), optional(','), ')'),
    type_parameter: $ => prec(29, seq(
      $.identifier,
      optional(seq(':', $.trait_bound, repeat(seq('+', $.trait_bound)))),
    )),
    trait_bound: $ => seq(optional('?'), $.contract),
    contract: $ => choice(
      $.contract_expr, // listed first: 'Identifier ...' preferred over 'Fn'
      $.function_contract,
      $.unit_contract,
    ),
    contract_expr: $ => choice(
      prec.right(29, seq(
        $.static_path,
        optional(seq('(', optional(seq($.contract_argument, repeat(seq(',', $.contract_argument)), optional(','))), ')')),
      )),
      prec.right(29, seq(
        $.identifier,
        repeat(seq('.', $.identifier)),
        optional(seq('(', optional(seq($.contract_argument, repeat(seq(',', $.contract_argument)), optional(','))), ')')),
      )),
    ),
    contract_argument: $ => choice($.contract, $.contract_array),
    unit_contract: $ => seq('(', optional(seq($.contract, repeat(seq(',', $.contract)), optional(','))), ')'),
    function_contract: $ => prec.right(seq('Fn', '(', optional(seq(
      choice($.contract, $.invalid_function_parameter),
      repeat(seq(',', choice($.contract, $.invalid_function_parameter))), optional(','))),
      ')', optional(seq('->', $.contract)))),
    pipeline_expr: $ => prec.left(2, seq($.expression, '|>', $.expression)),

    binary_expr: $ => choice(
      prec.left(16, seq($.expression, choice('*', '/', '%'), $.expression)),
      prec.left(14, seq($.expression, choice('+', '-'), $.expression)),
      prec.left(12, seq($.expression, '&', $.expression)),
      prec.left(11, seq($.expression, '^', $.expression)),
      prec.left(10, seq($.expression, '|', $.expression)),
      prec.left(9, seq($.expression, '<~', $.expression)),
      prec.left(8, seq($.expression, choice('<', '<=', '>', '>=', '==', '!='), $.expression)),
      prec.left(6, seq($.expression, '&&', $.expression)),
      prec.left(4, seq($.expression, '||', $.expression)),
    ),

    unary_expr: $ => prec(18, seq(choice('-', '!'), $.expression)),

    // postfix chain: tighter-binding postfixes at the bottom so e.g.
    // `f(a).b` reduces call before field while `f.a(b)` shifts call first.
    call_expr: $ => prec(28, seq($.expression, $.arguments)),
    type_apply_expr: $ => prec(26, seq($.expression, '@', $.type_arguments)),
    index_expr: $ => prec(24, seq($.expression, '[', $.expression, ']')),
    section_expr: $ => prec(22, seq($.expression, $.section_arguments)),
    dot_postfix_expr: $ => prec.right(20, seq($.expression, '.', optional(choice($.postfix_intrinsic_suffix, $.projection_suffix, $.metadata_suffix, $.field_projection_suffix)))),
    field_projection_suffix: $ => seq('{', optional(seq($.field_projection_entry, repeat(seq(',', $.field_projection_entry)), optional(','))), '}'),
    field_projection_entry: $ => seq($.identifier, optional(seq('as', $.identifier))),
    postfix_intrinsic_suffix: $ => seq($.identifier, '!', $.arguments),
    projection_suffix: $ => choice($.identifier, $.int_expr),

    primary: $ => choice(
      $.int_expr,
      $.float_expr,
      $.string_expr,
      $.concat_string,
      $.bytes_expr,
      $.named_intrinsic,
      $.variable_expr,
      $.interpreter_intrinsic,
      $.do_expr,
      $.if_let_expr,
      $.legacy_interpreter_expr,
      $.paren_expr,
      $.array_expr,
      prec(1, $.dict_expr), // before $.block: '{a}' / '{}' are dicts, '{ let ... }' falls back
      $.block,
      $.function_contract,
      $.closure,
      $.if_expr,
      $.match_expr,
      $.return_expr,
    ),

    int_expr: $ => /[0-9]+/,
    string_expr: $ => $.string_literal,
    variable_expr: $ => $.identifier,

    paren_expr: $ => seq('(', optional(seq($.array_item, repeat(seq(',', $.array_item)), optional(','))), ')'),
    array_item: $ => choice($.spread_item, $.expression),
    spread_item: $ => seq('...', $.expression),

    dict_expr: $ => prec.dynamic(1, seq('{', optional(seq($.dict_item, repeat(seq(',', $.dict_item)), optional(','))), '}')),
    dict_item: $ => choice($.spread_item, $.dict_field),
    dict_field: $ => choice(
      prec(1, $.identifier), // shorthand `{name}` — preferred over a bare block expression
      seq(repeat($.decorator), choice($.identifier, $.string_literal), ':', $.expression),
    ),

    block: $ => seq('{', optional($.block_body), '}'),
    do_expr: $ => seq('do', $.block),

    closure: $ => seq('fn', $.parameters, optional(seq('->', $.expression)), $.block),
    parameters: $ => seq('(', optional(seq($.parameter, repeat(seq(',', $.parameter)), optional(','))), ')'),
    parameter: $ => seq($.identifier, optional(seq(':', $.expression))),

    arguments: $ => seq('(', optional(seq($.expression, repeat(seq(',', $.expression)), optional(','))), ')'),
    type_arguments: $ => seq('[', $.type_argument, repeat(seq(',', $.type_argument)), optional(','), ']'),
    type_argument: $ => choice($.expression, $.placeholder),
    section_arguments: $ => seq($.section_lparen, optional(seq($.argument, repeat(seq(',', $.argument)), optional(','))), ')'),
    argument: $ => choice($.expression, $.placeholder, $.indexed_placeholder),

    ctrl_block: $ => choice($.block, $.if_let_expr, $.if_expr, $.match_expr, $.return_expr),
    if_expr: $ => seq('if', $.expression, $.block, 'else', $.ctrl_block),
    if_let_expr: $ => seq('if', 'let', $.pattern, '=', $.expression, $.block, 'else', $.ctrl_block),
    match_expr: $ => seq('match', $.expression, '{', optional(seq($.match_arm, repeat(seq(',', $.match_arm)), optional(','))), '}'),
    match_arm: $ => seq($.pattern, choice(seq('if', $.expression, '=>'), optional('=>')), $.expression),
    return_expr: $ => seq('return', $.expression, ';'),

    // ---------------------------------------------------------------- patterns
    identifier_pattern: $ => choice($.identifier, $.placeholder),
    constructor_pattern: $ => prec.right(1, choice(
      seq($.static_path, optional(seq('(', $.pattern, ')'))),
      seq($.identifier, repeat1(seq('.', $.identifier)), optional(seq('(', $.pattern, ')'))),
      seq($.identifier, '(', $.pattern, ')'),
    )),
    string_literal: $ => choice(
      seq($.quote_start, repeat(choice($.string_text, $.escape_sequence)), $.quote_end),
      $.raw_string,
    ),
    quote_start: $ => '"',
    quote_end: $ => token.immediate('"'),
    string_text: $ => token.immediate(prec(1, /[^"\\]+/)),
    escape_sequence: $ => token.immediate(/\\(u\{[^}"\r\n]*\}?|x[0-9A-Fa-f]{0,2}|[\u0009-\u000d\u0020\u0085\u00a0\u1680\u2000-\u200a\u2028\u2029\u202f\u205f\u3000]+|[^\r\n])?/),

    // backtick concatenation string. Anonymous '`' and '\{' '}' delimit the
    // segments; the fragment regex matches text/escapes and stops at the
    // structural boundaries (a bare '`' or an interpolation '\{'), so the
    // parser's states keep fragments, interpolations and the embedded
    // expressions apart without any external-scanner state.
    concat_string: $ => seq(
      '`',
      repeat(choice($.concat_fragment, alias($.concat_escape, $.escape_sequence), $.interpolation)),
      '`',
    ),
    concat_fragment: $ => token.immediate(prec(1, /[^`\\]+/)),
    interpolation: $ => seq('\\{', $.expression, '}'),
  },
});
