test/corpus/bindings.txt
==================
bindings
==================

decl name : Int;
def x : Int = 1;
def add : Fn(Int, Int) -> Int = fn(a, b) { a + b };

---

(source_file
  (newline)
  (module_body
    (module_binding
      (decl_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_scheme
          (contract
            (contract_expr
              (identifier))))))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_scheme
          (contract
            (contract_expr
              (identifier))))
        (spaces)
        (spaces)
        (primary
          (int_expr))))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_scheme
          (contract
            (function_contract
              (contract
                (contract_expr
                  (identifier)))
              (spaces)
              (contract
                (contract_expr
                  (identifier)))
              (spaces)
              (spaces)
              (contract
                (contract_expr
                  (identifier))))))
        (spaces)
        (spaces)
        (primary
          (closure
            (parameters
              (parameter
                (identifier))
              (spaces)
              (parameter
                (identifier)))
            (spaces)
            (block
              (spaces)
              (block_body
                (binary_expr
                  (primary
                    (variable_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (primary
                    (variable_expr
                      (identifier)))))
              (spaces)))))))
  (newline))

==================
precedence: pipeline binds loosest
==================

def r = a + b |> f;

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (pipeline_expr
          (binary_expr
            (primary
              (variable_expr
                (identifier)))
            (spaces)
            (spaces)
            (primary
              (variable_expr
                (identifier))))
          (spaces)
          (spaces)
          (primary
            (variable_expr
              (identifier)))))))
  (newline))

==================
precedence: call binds tighter than field
==================

def r = f(a).b;

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (dot_postfix_expr
          (call_expr
            (primary
              (variable_expr
                (identifier)))
            (arguments
              (primary
                (variable_expr
                  (identifier)))))
          (projection_suffix
            (identifier))))))
  (newline))

==================
marked type application and positional projection
==================

def specialized = generic@[Int];
def item = values[index];
def first = pair.0;

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_apply_expr
          (primary
            (variable_expr
              (identifier)))
          (type_arguments
            (type_argument
              (primary
                (variable_expr
                  (identifier))))))))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (index_expr
          (primary
            (variable_expr
              (identifier)))
          (primary
            (variable_expr
              (identifier))))))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (dot_postfix_expr
          (primary
            (variable_expr
              (identifier)))
          (projection_suffix
            (int_expr))))))
  (newline))

==================
type scheme with for parameters
==================

def Parser : for(A) Fn(A) -> Box(Int) = fn(x) -> Int { x };

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_scheme
          (type_parameters
            (type_parameter
              (identifier)))
          (spaces)
          (contract
            (function_contract
              (contract
                (contract_expr
                  (identifier)))
              (spaces)
              (spaces)
              (contract
                (contract_expr
                  (identifier)
                  (contract_argument
                    (contract
                      (contract_expr
                        (identifier)))))))))
        (spaces)
        (spaces)
        (primary
          (closure
            (parameters
              (parameter
                (identifier)))
            (spaces)
            (spaces)
            (primary
              (variable_expr
                (identifier)))
            (spaces)
            (block
              (spaces)
              (block_body
                (primary
                  (variable_expr
                    (identifier))))
              (spaces)))))))
  (newline))

==================
static trait declarations, bounds, and implementations
==================

trait Display {
  display: Fn(Self) -> String,
};
type Endpoint = struct { host: String };
impl Display for Endpoint {
  display: fn(value) { value.host },
};
def render: for(T: Display + Property(DisplayBy)) Fn(T) -> String = fn(value) {
  Display.display(value)
};
impl(T: Property(DisplayBy)) Display for T {
  display: fn(value) { "decorated" },
};

---

(source_file
  (newline)
  (module_body
    (module_binding
      (trait_binding
        (spaces)
        (identifier)
        (spaces)
        (newline)
        (spaces)
        (trait_member
          (identifier)
          (spaces)
          (contract
            (function_contract
              (contract
                (contract_expr
                  (identifier)))
              (spaces)
              (spaces)
              (contract
                (contract_expr
                  (identifier))))))
        (newline)))
    (newline)
    (module_binding
      (type_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_initializer
          (struct_initializer
            (spaces)
            (spaces)
            (struct_initializer_field
              (identifier)
              (spaces)
              (primary
                (variable_expr
                  (identifier))))
            (spaces)))))
    (newline)
    (module_binding
      (impl_binding
        (spaces)
        (contract
          (contract_expr
            (identifier)))
        (spaces)
        (spaces)
        (contract
          (contract_expr
            (identifier)))
        (spaces)
        (newline)
        (spaces)
        (impl_member
          (identifier)
          (spaces)
          (primary
            (closure
              (parameters
                (parameter
                  (identifier)))
              (spaces)
              (block
                (spaces)
                (block_body
                  (dot_postfix_expr
                    (primary
                      (variable_expr
                        (identifier)))
                    (projection_suffix
                      (identifier))))
                (spaces)))))
        (newline)))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (type_scheme
          (type_parameters
            (type_parameter
              (identifier)
              (spaces)
              (trait_bound
                (contract
                  (contract_expr
                    (identifier))))
              (spaces)
              (spaces)
              (trait_bound
                (contract
                  (contract_expr
                    (identifier)
                    (contract_argument
                      (contract
                        (contract_expr
                          (identifier)))))))))
          (spaces)
          (contract
            (function_contract
              (contract
                (contract_expr
                  (identifier)))
              (spaces)
              (spaces)
              (contract
                (contract_expr
                  (identifier))))))
        (spaces)
        (spaces)
        (primary
          (closure
            (parameters
              (parameter
                (identifier)))
            (spaces)
            (block
              (newline)
              (spaces)
              (block_body
                (call_expr
                  (dot_postfix_expr
                    (primary
                      (variable_expr
                        (identifier)))
                    (projection_suffix
                      (identifier)))
                  (arguments
                    (primary
                      (variable_expr
                        (identifier))))))
              (newline))))))
    (newline)
    (module_binding
      (impl_binding
        (type_parameters
          (type_parameter
            (identifier)
            (spaces)
            (trait_bound
              (contract
                (contract_expr
                  (identifier)
                  (contract_argument
                    (contract
                      (contract_expr
                        (identifier)))))))))
        (spaces)
        (contract
          (contract_expr
            (identifier)))
        (spaces)
        (spaces)
        (contract
          (contract_expr
            (identifier)))
        (spaces)
        (newline)
        (spaces)
        (impl_member
          (identifier)
          (spaces)
          (primary
            (closure
              (parameters
                (parameter
                  (identifier)))
              (spaces)
              (block
                (spaces)
                (block_body
                  (primary
                    (string_expr
                      (string_literal
                        (quote_start)
                        (string_text)
                        (quote_end)))))
                (spaces)))))
        (newline))))
  (newline))

==================
concat string with interpolation
==================

def name = `hello \{who} world`;

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (primary
          (concat_string
            (concat_fragment)
            (interpolation
              (primary
                (variable_expr
                  (identifier))))
            (concat_fragment))))))
  (newline))

==================
call section with placeholders
==================

def s = transform\(_1, 123, _0);

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (section_expr
          (primary
            (variable_expr
              (identifier)))
          (section_arguments
            (section_lparen)
            (argument
              (indexed_placeholder))
            (spaces)
            (argument
              (primary
                (int_expr)))
            (spaces)
            (argument
              (indexed_placeholder)))))))
  (newline))

==================
declared struct and enum initializers
==================

@json::rename_all(CamelCase)
type User = struct {
  @json::rename("userId") id: Int,
  name: String,
};

type Expr = enum {
  Literal(Int),
  @json::rename("call") Call(CallExpr),
};

type CallExpr = struct { args: Array(Expr) };

---

(source_file
  (newline)
  (module_body
    (module_binding
      (type_binding
        (decorator
          (decorator_path
            (identifier)
            (identifier))
          (arguments
            (primary
              (variable_expr
                (identifier)))))
        (newline)
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_initializer
          (struct_initializer
            (spaces)
            (newline)
            (spaces)
            (struct_initializer_field
              (decorator
                (decorator_path
                  (identifier)
                  (identifier))
                (arguments
                  (primary
                    (string_expr
                      (string_literal
                        (quote_start)
                        (string_text)
                        (quote_end))))))
              (spaces)
              (identifier)
              (spaces)
              (primary
                (variable_expr
                  (identifier))))
            (newline)
            (spaces)
            (struct_initializer_field
              (identifier)
              (spaces)
              (primary
                (variable_expr
                  (identifier))))
            (newline)))))
    (newline)
    (newline)
    (module_binding
      (type_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_initializer
          (enum_initializer
            (spaces)
            (newline)
            (spaces)
            (enum_initializer_variant
              (identifier)
              (primary
                (variable_expr
                  (identifier))))
            (newline)
            (spaces)
            (enum_initializer_variant
              (decorator
                (decorator_path
                  (identifier)
                  (identifier))
                (arguments
                  (primary
                    (string_expr
                      (string_literal
                        (quote_start)
                        (string_text)
                        (quote_end))))))
              (spaces)
              (identifier)
              (primary
                (variable_expr
                  (identifier))))
            (newline)))))
    (newline)
    (newline)
    (module_binding
      (type_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (type_initializer
          (struct_initializer
            (spaces)
            (spaces)
            (struct_initializer_field
              (identifier)
              (spaces)
              (call_expr
                (primary
                  (variable_expr
                    (identifier)))
                (arguments
                  (primary
                    (variable_expr
                      (identifier))))))
            (spaces))))))
  (newline))

==================
current operators and postfix forms
==================

def item = values[1].field.0.dbg!("item");
def bits = !flag || ((a % 2 & mask) ^ extra | fallback) != 0;
def branch = if first { 1 } else if let Some(x) = value { x } else match other { None => return 0; };

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (dot_postfix_expr
          (dot_postfix_expr
            (dot_postfix_expr
              (index_expr
                (primary
                  (variable_expr
                    (identifier)))
                (primary
                  (int_expr)))
              (projection_suffix
                (identifier)))
            (projection_suffix
              (int_expr)))
          (postfix_intrinsic_suffix
            (identifier)
            (arguments
              (primary
                (string_expr
                  (string_literal
                    (quote_start)
                    (string_text)
                    (quote_end)))))))))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (binary_expr
          (unary_expr
            (primary
              (variable_expr
                (identifier))))
          (spaces)
          (spaces)
          (binary_expr
            (primary
              (paren_expr
                (array_item
                  (binary_expr
                    (binary_expr
                      (primary
                        (paren_expr
                          (array_item
                            (binary_expr
                              (binary_expr
                                (primary
                                  (variable_expr
                                    (identifier)))
                                (spaces)
                                (spaces)
                                (primary
                                  (int_expr)))
                              (spaces)
                              (spaces)
                              (primary
                                (variable_expr
                                  (identifier)))))))
                      (spaces)
                      (spaces)
                      (primary
                        (variable_expr
                          (identifier))))
                    (spaces)
                    (spaces)
                    (primary
                      (variable_expr
                        (identifier)))))))
            (spaces)
            (spaces)
            (primary
              (int_expr))))))
    (newline)
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (spaces)
        (primary
          (if_expr
            (spaces)
            (primary
              (variable_expr
                (identifier)))
            (spaces)
            (block
              (spaces)
              (block_body
                (primary
                  (int_expr)))
              (spaces))
            (spaces)
            (spaces)
            (ctrl_block
              (if_let_expr
                (spaces)
                (spaces)
                (constructor_pattern
                  (identifier)
                  (identifier_pattern
                    (identifier)))
                (spaces)
                (spaces)
                (primary
                  (variable_expr
                    (identifier)))
                (spaces)
                (block
                  (spaces)
                  (block_body
                    (primary
                      (variable_expr
                        (identifier))))
                  (spaces))
                (spaces)
                (spaces)
                (ctrl_block
                  (match_expr
                    (spaces)
                    (primary
                      (variable_expr
                        (identifier)))
                    (spaces)
                    (spaces)
                    (match_arm
                      (identifier_pattern
                        (identifier))
                      (spaces)
                      (spaces)
                      (primary
                        (return_expr
                          (spaces)
                          (primary
                            (int_expr)))))
                    (spaces))))))))))
  (newline))

==================
do block module initializer
==================

def answer: Int = do { let base = 40; base + 2 };

---

(source_file
  (newline)
  (module_body
    (module_binding
      (def_binding
        (spaces)
        (identifier)
        (spaces)
        (type_scheme
          (contract
            (contract_expr
              (identifier))))
        (spaces)
        (spaces)
        (primary
          (do_expr
            (spaces)
            (block
              (spaces)
              (block_body
                (let_binding
                  (spaces)
                  (identifier)
                  (spaces)
                  (spaces)
                  (primary
                    (int_expr)))
                (spaces)
                (binary_expr
                  (primary
                    (variable_expr
                      (identifier)))
                  (spaces)
                  (spaces)
                  (primary
                    (int_expr))))
              (spaces)))))))
  (newline))
